Fixed iFrame expanding infinitely on iOS Safari

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -442,6 +442,9 @@ section {
   position: relative;
   overflow: hidden;
   padding: 15vh 0px;
+  max-height: 100%;
+  min-height: 100%;
+  height: 100%;
 }
 #interactive-map .interactive-map-background {
   position: absolute;
@@ -516,24 +519,29 @@ section {
 
 #iframe-row {
   display: table;
-  height: auto;
   width: 80%;
+  max-width: 80%;
   left: 50%;
   margin: 0px auto;
   height: 70vh;
-  z-index: 999;
+  max-height: 70vh;
 }
 #iframe-container {
-  border: 3px solid green;
   display: table-row;
   height: 100%;
+  max-height: 100%;
   margin: 10% 0px;
 }
 #iframe-container iframe {
-  width: 100%;
-  height: 100%;
   border: 5px solid white;
   box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.5);
+  height: 1px;
+  min-height: 70vh;
+  *height: 100%;
+}
+.wordpressframe {
+  width: 100%;
+  height: 100%;
 }
 
 #around-the-area {
