--- a/interactive-floormap/assets/css/showcasepage.css
+++ b/interactive-floormap/assets/css/showcasepage.css
@@ -4,10 +4,20 @@
 }
 
 body {
-    height: 100vh;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    min-height: 100%;
+    top: 0px;
+    left: 0px;
     background-color: #26381c;
-    background: linear-gradient(45deg, rgba(38,56,28,1) 0%,rgba(64,91,45,1) 50%,rgba(38,56,28,1) 100%);
     background-size: fill;
+}
+
+.content-container {
+    width: 100%;
+    height: 100%;
 }
 
 #main {
@@ -16,7 +26,7 @@ body {
     color: white;
 }
 #main .row {
-    height: 100vh;
+    height: 100%;
 }
 
 #text-column {
@@ -80,6 +90,7 @@ body {
 }
 #text-column .title {
     margin-top: 5%;
+    color: white;
 }
 #text-column .border-piece {
     position: absolute;
@@ -93,7 +104,7 @@ body {
 
 #image-column {
     position: absolute;
-    width: 50vw;
+    width: 50%;
     height: 100%;
     top: 0px;
     right: 0px;
@@ -102,8 +113,8 @@ body {
     transition: 0.3s;
 }
 #image-column.active {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 1.0);
     top: 0px;
 }
@@ -211,14 +222,14 @@ body {
 
 @media (orientation: portrait) {
     #main .row {
-        height: 50vh;
+        height: 50%;
     }
     #text-column .showcase-text {
         font-size: 4vw;
     }
     #text-column {
-        width: 100vw;
-        height: 50vh;
+        width: 100%;
+        height: 50%;
     }
     #text-column .border-piece {
         display: none;
@@ -228,7 +239,7 @@ body {
     }
     #image-column {
         width: 100%;
-        height: 50vh;
+        height: 50%;
         top: 50%;
     }
     #image-column .close-button {
@@ -236,5 +247,24 @@ body {
     }
     #image-column .full-image-text {
         font-size: 7vw;
+    }
+}
+
+@media (orientation: portrait) {
+    #BigMain {
+        width: 100%;
+        background: #ccc;
+    }
+    #C {
+        width: 1px;
+        min-width: 100%;
+        /* height: 1px; */
+        /* min-height: 100%; */
+        *width: 100%;
+        /* *height: 100%; */
+        
+        /* overflow: scroll;
+        white-space: nowrap;
+        background: #82ca9c; */
     }
 }
